force-app/main/default/objects/SBS_Support__mdt/SBS_Support__mdt.object-meta.xml
<CustomObject>
    <description>This is used for Calculating Issue Target Completion Date</description>
    <label>SBS Support</label>
    <pluralLabel>SBS Supports</pluralLabel>
</CustomObject>