force-app/main/default/objects/SBS_Support__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ad hoc Report Request</fullName>
                <default>true</default>
                <label>Ad hoc Report Request</label>
            </value>
            <value>
                <fullName>BTB</fullName>
            </value>
            <value>
                <fullName>Claim Hold</fullName>
            </value>
            <value>
                <fullName>Demos/Training</fullName>
            </value>
            <value>
                <fullName>Document Review Board</fullName>
            </value>
            <value>
                <fullName>DRG</fullName>
            </value>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Lunch N Learn</fullName>
            </value>
            <value>
                <fullName>ORBIT</fullName>
            </value>
            <value>
                <fullName>Project</fullName>
            </value>
            <value>
                <fullName>Resource Center</fullName>
            </value>
            <value>
                <fullName>RX</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Sharepoint</fullName>
            </value>
            <value>
                <fullName>Standard Report</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>BAR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>