force-app/main/default/objects/SBS_Support__mdt/fields/Sub_Category__c.field-meta.xml
<CustomField>
    <fullName>Sub_Category__c</fullName>
    <label>Sub Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Request Access</fullName>
                <default>true</default>
                <label>Request Access</label>
            </value>
            <value>
                <fullName>Update CM</fullName>
            </value>
            <value>
                <fullName>Update Customer Name</fullName>
            </value>
            <value>
                <fullName>Benefit Question</fullName>
            </value>
            <value>
                <fullName>System Issue</fullName>
            </value>
            <value>
                <fullName>Report Request</fullName>
            </value>
            <value>
                <fullName>General Question</fullName>
            </value>
            <value>
                <fullName>Assistance</fullName>
            </value>
            <value>
                <fullName>Question</fullName>
            </value>
            <value>
                <fullName>Update AMT</fullName>
            </value>
            <value>
                <fullName>ORBIT</fullName>
            </value>
            <value>
                <fullName>Salesforce</fullName>
            </value>
            <value>
                <fullName>Sharepoint</fullName>
            </value>
            <value>
                <fullName>BTB</fullName>
            </value>
            <value>
                <fullName>Multiple sources</fullName>
            </value>
            <value>
                <fullName>Requestor provided</fullName>
            </value>
            <value>
                <fullName>Creation</fullName>
            </value>
            <value>
                <fullName>Maintenance</fullName>
            </value>
            <value>
                <fullName>Access</fullName>
            </value>
            <value>
                <fullName>Template Creation</fullName>
            </value>
            <value>
                <fullName>Template Maintenance</fullName>
            </value>
            <value>
                <fullName>Error Code Maintenance</fullName>
            </value>
            <value>
                <fullName>System Maintenance</fullName>
            </value>
            <value>
                <fullName>Review Document</fullName>
            </value>
            <value>
                <fullName>Category/Subcategory Request</fullName>
            </value>
            <value>
                <fullName>Tableau</fullName>
            </value>
            <value>
                <fullName>CM Staffing Model</fullName>
            </value>
            <value>
                <fullName>Appeal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>