force-app/main/default/objects/SBS_Support__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Category</fullName>
                <default>true</default>
                <label>Category</label>
            </value>
            <value>
                <fullName>Visibility</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>